Fix - Removed horizontal scroll from home, movie page

--- a/MvcWebRole1/Content/styles/mm.common.css
+++ b/MvcWebRole1/Content/styles/mm.common.css
@@ -13,7 +13,7 @@
 }
 .movies{
     float: left;
-    margin-left: 7%;
+    margin-left: 5%;
     padding-top: 20px;
         /*
         width: 86%;
