--- a/MvcWebRole1/Content/styles/mm.moviedetails.css
+++ b/MvcWebRole1/Content/styles/mm.moviedetails.css
@@ -131,6 +131,6 @@ div.captionAndNavigate {
         width: 85%;
         margin-top: 20px;
     }
-    .movie-data{width: 90%;} 
+    .movie-data{width: 100%;} 
     .artist-bio{width: 80%;}   
 }
